# lactea

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: build.yml  deploy-pages.yml
data_structure/: CMakeLists.txt  vcpkg.json
data_structure/src/lactea_xp_merged/: StarCache.h  ViewBound.h  async_cache.hpp  cached_star.cpp  cached_star.hpp  cached_star_db.cpp  cached_star_db.hpp  light_spectrum.cpp  light_spectrum.hpp  raw_star_db.cpp  raw_star_db.hpp  star.hpp  star_tree.cpp  star_tree.hpp
data_structure/src/raw_star_db_sorter_xp_merged/: raw_star_db_sorter_xp_merged.cpp
data_structure/src/raw_star_db_subset_writer_xp_merged/: raw_star_db_subset_writer_xp_merged.cpp
data_structure/src/sandbox/: sandbox.cpp
data_structure/src/star_tree_builder_xp_merged/: star_tree_builder_xp_merged.cpp
data_structure/src/star_tree_chunker_xp_merged/: star_tree_chunker_xp_merged.cpp
data_structure/src/utils/: options.hpp  portable_io.cpp  portable_io.h  utility_types.hpp
data_structure/src/utils/gl/: Buffer.h  Framebuffer.h  Pipeline.cpp  Pipeline.h  Texture.h  VertexArray.cpp  VertexArray.h  glIncludes.h
res/data/gdr3_gaia_source_xp_extinction_10K/: 0.nodes  11.node  13.node  14.node  3.node  7.node  tree.tr
res/profile/: fig10.json  fig9.json  showcase.json
res/shaders/: AccumulateRegion.wgsl  CIEConvolutionShader.wgsl  ColorConvolutionShader.wgsl  GaussianSmoothingShader.wgsl  MinimapComboShader.wgsl  MinimapShader.wgsl  NarrowBandFilter.wgsl  NodeComputeShader.wgsl  Percentile.wgsl  ReduceNodeCount.wgsl  SelectedPointShader.wgsl  SignatureShader.wgsl  StarComputeShader.wgsl  StarComputeShaderFiltering.wgsl  TextureShader.wgsl  TwoScreenTextureShader.wgsl
res/styles/: style.scss
script/: download.sh  downloader.py
src/: main.js  playground.js
src/lactea/: LightSpectrum.js  MinStar.js  ViewBound.js
src/tests/: cacheTest.js  lacteaTest.js  softfloatTest.js
src/ui/: ConvergenceViewer.js  InfoViewer.js  NarrowBandViewer.js  SignatureViewer.js
src/visualizer/: Camera.js  LacteaCache.js  LacteaVisualizer.js  PipelineSelectedSpectrum.js  PipelineStarCompute.js  Settings.js  ViewerColormap.js  ViewerProgress.js  ViewerSignature.js
src/visualizer/utils/: GPUCache.js  Pipeline.js  PriorityQueue.js  TimingHelper.js  utils.js
test/: asyncQuery.html  cache.html
web_visualizer/: index.html  playground.html
web_visualizer/res/data/gdr3_gaia_source_xp_extinction_10K/: 10.node  8.node
web_visualizer/res/profile/: default.json  fig11.json
web_visualizer/res/shaders/: AccumulateSinglePoint.wgsl  BorderShader.wgsl  ColormapCategoricalShader.wgsl  ColormapShader.wgsl  ImageHistogram.wgsl  LDRShader.wgsl  NarrowBandFilter copy.wgsl  NodeLayout.wgsl  PhotometryShader.wgsl  ReduceMax.wgsl  ReduceSum.wgsl  TextureShaderTransform.wgsl
web_visualizer/res/styles/: style.css  style.scss
web_visualizer/src/lactea/: Node.js  StarTree.js  utils.js
web_visualizer/src/tests/: asyncTree.js
web_visualizer/src/ui/: ProgressViewer.js  SpectrumViewer.js  TransferFunction.js
web_visualizer/src/visualizer/: LacteaInterface.js  LacteaVisualizer.js  PipelineMinimap.js  PipelineNodeCompute.js  PipelineNodeLayout.js  PipelineRender.js  ViewerConvergence.js  ViewerPerformance.js
web_visualizer/src/visualizer/utils/: Draggable.js  RollingAverage.js
web_visualizer/test/: lactea.html  softfloat.html
